Changes for 3.2.10rc1

New features:
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes:
...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
..F....... [ZBX-6669] fixed use of current host as filter when selecting items for graph forms and trigger forms (gcalenko)
..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
..F....... [ZBX-12710] fixed OS type detection logic (vjaceslavs)
..F....... [ZBX-12543] fixed problems with session management (vjaceslavs)
........S. [ZBX-12259] added an informative warning about lack of data for macros used in LLD rule filter (viktors)

--------------------------------------------------------------------------------
Changes for 3.2.9

3.2.9rc1 was released as 3.2.9 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.9rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
..F....... [ZBX-12788] fixed error when template is added to hosts via mass update form (gcalenko, vmurzins)
..F....... [ZBX-12666] fixed ETag comparison check in jsLoader for web server with enabled compression (gcalenko)
........S. [ZBX-10547] fixed IT services calculation in parallel transactions not seeing each other changes when calculating common parent service (vso)
........S. [ZBX-12441] fixed user permission check for macros containing user personal information in notification messages (viktors)
....I..... [ZBX-12779] fixed detection of PostgreSQL 10 (Andris)
.......P.. [ZBX-12281] fixed simultaneous sending of the same history data from passive proxy (gleb, vjaceslavs)